# veduta

./: .env.example  .gitignore  Makefile  Package.swift  README.md
Assets/: AppIcon.icns
Data/: covers.json
Data/scripts/: publish_mirror.py
Data/tests/: conftest.py  test_artwork_kinds.py  test_chicago_api_import.py  test_cleveland_import.py  test_cli.py  test_downloader.py  test_library_writer.py  test_mark_lowres_artworks.py  test_mark_sparse_metadata_artworks.py  test_met_import.py  test_vam_import.py  test_ycba_import.py
Resources/: Info.plist  Veduta.entitlements
Resources/en.lproj/: InfoPlist.strings
Resources/zh-Hans.lproj/: InfoPlist.strings
Sources/OpenArtPaper/: SettingsWindowController.swift  main.swift
Sources/OpenArtPaperCore/: AppPreferences.swift  LocalLibrary.swift  Models.swift  RandomArtworkPicker.swift  WallpaperService.swift
Sources/Veduta/: SettingsWindowController.swift  main.swift
Sources/VedutaCore/: AppPreferences.swift  ArtworkKind.swift  Models.swift  (+6 more)
data-ops/: pyproject.toml
data-ops/scripts/: apply_lowres_candidates.py  commons_download.py  commons_scan.py  dezoomify_lowres.py  remove_lowres_artworks.py
data-ops/src/openartpaper_data/: artpaper_import.py  cli.py  downloader.py  google_arts_dezoom.py  installed_packs.py  library_writer.py  models.py
data-ops/src/veduta_data/: artpaper_import.py  artwork_kinds.py  cli.py  downloader.py  google_arts_dezoom.py  installed_packs.py  library_writer.py
data-ops/tests/: test_artpaper_import.py  test_cli.py  test_downloader.py  test_installed_packs.py  test_library_writer.py
(+55 files in other folders)
