[project]
name = "veduta-data"
version = "0.1.0"
description = "Local data pipeline for Veduta"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
veduta-data = "veduta_data.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
